vlib/v/parser/tests/orm_no_error_handler.vv
struct User {
	id int
}

fn main() {
	db := true

	_ := sql db {
		select from User
	}
}
